--- a/package.json
+++ b/package.json
@@ -1,45 +1,25 @@
 {
   "name": "the-real-junk-food-project",
-  "version": "1.0.0",
-  "description": "![](http://www.pacnvac.co.uk/wp-content/uploads/2017/07/logo_280x280.png)",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest --watch",
-    "dev": "parcel index.html",
-    "build": "parcel build index.html"
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "\\.(css|less|sass|scss)$": "<rootDir>/__mocks__/styleMock.js",
-      "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
-    }
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fac-15/the-real-junk-food-project.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/fac-15/the-real-junk-food-project/issues"
-  },
-  "homepage": "https://github.com/fac-15/the-real-junk-food-project#readme",
-  "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.13.0",
-    "eslint-config-react-minimal": "^1.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-react": "^7.12.4",
-    "jest": "^24.1.0",
-    "parcel-bundler": "^1.11.0"
-  },
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "react": "^16.8.0",
-    "react-dom": "^16.8.0"
-  }
+    "react-dom": "^16.8.0",
+    "react-scripts": "2.1.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
