--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "the-real-junk-food-project",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "airtable": "^0.5.8",
     "react": "^16.8.0",
@@ -23,5 +24,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "express": "^4.16.4",
+    "nodemon": "^1.18.10"
+  }
 }
