--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "airtable": "^0.5.8",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-testing-library": "^5.6.1"
   },
