--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "airtable": "^0.5.8",
     "body-parser": "^1.18.3",
+    "env2": "^2.2.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-router-dom": "^4.3.1",
