--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.8.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "react-testing-library": "^5.6.1"
+    "react-testing-library": "^5.6.1",
+    "sweetalert2": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
