generate random code with crypto. updateCode.js updates code in airtable with code. updateCode executed at 00:05 every day by node-cron

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "airtable": "^0.5.8",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
+    "cron": "^1.6.0",
     "env2": "^2.2.2",
     "jsonwebtoken": "^8.4.0",
     "jwt-decode": "^2.2.0",
