--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-testing-library": "^5.6.1",
-    "sweetalert2": "^8.2.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "styled-css-grid": "^1.2.1",
+    "sweetalert2": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
