--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "cd build && npm install && npm run build"
   },
   "proxy": "http://localhost:8080",
   "eslintConfig": {
