--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "sweetalert2": "^8.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
