--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "sweetalert2": "^8.2.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm install && npm run build"
+    "heroku-postbuild": "npm install && npm run build && node server.js"
   },
   "proxy": "http://localhost:8080",
   "eslintConfig": {
